--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   text-align: center;
   background-color: #f0f0f0;
-  background-image: linear-gradient(to right, #f0f0f0, #e0e0e0);
+  background-image: linear-gradient(to bottom, #BFFFC7, #D6EAF8, #B6C0C5);
 }
 
 h1 {
