--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   text-align: center;
-  background-image: linear-gradient(to bottom, #BFFFC7, #D6EAF8, #B6C0C5);
+  background-image: linear-gradient(to top right, #BFFFC7, #D6EAF8, #B6C0C5);
 }
 
 h1 {
