--- a/gradient-background.css
+++ b/gradient-background.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background: linear-gradient(-45deg, #7BDFF2, #B2F7EF, #EFF7F6, #F7D6E0, #F2B5D4);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   height: 100vh;
