--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 button {
-  background-color: #7bd5f2;
+  background-color: #7bc1f2;
   color: white;
   padding: 15px 32px;
   text-align: center;
