--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ button {
   transition: all 0.3s ease-in-out;
 
   &:hover {
-    background-color: #3e8e41;
+    background-color: #7bcbf2;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
     transform: translateY(-3px);
   }
